--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BUT Informatique - Accueil</title>
+        <title>Accueil</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -26,7 +26,7 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ---->
-            <div id="contenu_page">
+            <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
                     <h1>Bienvenue sur notre site !</h1>
                     <div id="article_1">
@@ -58,6 +58,7 @@
                         <li><a href="page4_A_propos_de_nous.html">A propos de nous</a></li>
                         <li><a href="page5_Liste_des_IUT.html">Liste des IUT</a></li>
                         <li><a href="page6_contact.html">Contact</a></li>
+                    </ul>
                     <p>Réalisation : Nicolas DE SAINT JEAN et Corentin GESSE--ENTRESSANGLE - 2021</p>
                 </div>
                 <div id="footer_images">
