--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BUT Informatique - Accueil</title>
+        <title>Qu'est-ce que le BUT ?</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -27,7 +27,7 @@
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
 
-            <div id="contenu_page"> 
+            <div id="contenu_page" class="bordure"> 
             
                 <h1> Qu'est ce que le BUT ? </h1> 
 
@@ -37,7 +37,7 @@
                 </p> 
 
                 <p> Depuis cette année, la formation a été remplacé par le BUT Informatique (Bachelor Universitaire de Technologie). La formation est donc passée de 2 ans à 3 ans. 
-                Pour en savoir plus sur les changements et différences des deux formations vous pouvez vous rendre sur ce site : http://etudiant.aujourdhui.fr/etudiant/info/diplomes-le-dut-devient-le-but-bachelor-universitaire-de-technologie.html. 
+                Pour en savoir plus sur les changements et différences des deux formations vous pouvez vous rendre sur ce <a href="http://etudiant.aujourdhui.fr/etudiant/info/diplomes-le-dut-devient-le-but-bachelor-universitaire-de-technologie.html">site</a>. 
                 </p> 
 
                 <h2> Admissions </h2> 
