--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BUT Informatique - Accueil</title>
+        <title>Liste des IUT</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -26,12 +26,12 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ---->
-            <div id="contenu_page">
+            <div id="contenu_page" class="bordure">
                 <h1>Liste des IUT proposant la formation</h1>
                 <div id="liste_sites_iut">
                     <div id="no1">
                         <h2>IUT Lyon 1</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site Villeurbanne Doua (Villeurbanne - 69)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -53,7 +53,7 @@
                     </div>
                     <div id="no2">
                         <h2>IUT de Valence</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Valence - 26)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -66,7 +66,7 @@
                     </div>
                     <div id="no3">
                         <h2>IUT 2 de Grenoble</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Grenoble - 38)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -79,7 +79,7 @@
                     </div>
                     <div id="no4">
                         <h2>IUT d'Annecy</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Annecy - 74)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -92,7 +92,7 @@
                     </div>
                     <div id="no5">
                         <h2>IUT de Nice</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Nice - 06)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -111,7 +111,7 @@
                     </div>
                     <div id="no6">
                         <h2>IUT Aix-Marseille</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site d'Aix-En-Provence (Aix-En-Provence 13)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -131,7 +131,7 @@
                     </div>
                     <div id="no7">
                         <h2>IUT de Montpellier</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Montpellier - 34)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -154,7 +154,7 @@
                     </div>
                     <div id="no8">
                         <h2>IUT de Toulouse</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Toulouse - 31)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -168,7 +168,7 @@
                     </div>
                     <div id="no9">
                         <h2>IUT de Blagnac</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Blagnac - 31)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -181,7 +181,7 @@
                     </div>
                     <div id="no10">
                         <h2>IUT de Bayonne</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Anglet - 64)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -195,7 +195,7 @@
                     </div>
                     <div id="no11">
                         <h2>IUT de Bordeaux</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Gradignan - 33)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -208,7 +208,7 @@
                     </div>
                     <div id="no12">
                         <h2>IUT La Rochelle</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (La Rochelle - 17)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -220,7 +220,7 @@
                     </div>
                     <div id="no13">
                         <h2>IUT de Nantes</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Carquefou - 44)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -234,7 +234,7 @@
                     </div>
                     <div id="no14">
                         <h2>IUT de Vannes</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Vannes - 56)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -247,7 +247,7 @@
                     </div>
                     <div id="no15">
                         <h2>IUT de Lannion</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Lannion - 22)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -260,7 +260,7 @@
                     </div>
                     <div id="no16">
                         <h2>IUT Laval</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Laval - 53)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -273,7 +273,7 @@
                     </div>
                     <div id="no17">
                         <h2>IUT Grand Ouest Normandie</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site d'Ifs (Caen - 14)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -286,7 +286,7 @@
                     </div>
                     <div id="no18">
                         <h2>IUT du Havre</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Le Havre - 76)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -298,7 +298,7 @@
                     </div>
                     <div id="no19">
                         <h2>IUT d'Amiens</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Amiens - 80)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -313,7 +313,7 @@
                     </div>
                     <div id="no20">
                         <h2>IUT Littoral</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site Calais (Calais - 62)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -327,7 +327,7 @@
                     </div>
                     <div id="no21">
                         <h2>IUT A de Lille</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Villeneuve-d'Ascq - 59)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -340,7 +340,7 @@
                     </div>
                     <div id="no22">
                         <h2>IUT de Lens</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Lens - 62)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -354,7 +354,7 @@
                     </div>
                     <div id="no23">
                         <h2>IUT de Valenciennes</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site de Maubeuge (Maubeuge - 59)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -367,7 +367,7 @@
                     </div>
                     <div id="no24">
                         <h2>IUT de Reims-Châlons-Charleville</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site de Charleville (Charleville-Mézières - 51)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -380,7 +380,7 @@
                     </div>
                     <div id="no25">
                         <h2>IUT de Metz</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Metz - 57)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -394,7 +394,7 @@
                     </div>
                     <div id="no26">
                         <h2>IUT Nancy-Charlemagne</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Nancy - 57)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -408,7 +408,7 @@
                     </div>
                     <div id="no27">
                         <h2>IUT d'Illkirch</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Illkirch-Graffenstaden - 67)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -421,7 +421,7 @@
                     </div>
                     <div id="no28">
                         <h2>IUT de Saint-Dié</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Saint-Dié-des-Vosges - 88)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -435,7 +435,7 @@
                     </div>
                     <div id="no29">
                         <h2>IUT de Belfort-Monbéliard</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Belfort - 90)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -448,7 +448,7 @@
                     </div>
                     <div id="no30">
                         <h2>IUT de Dijon</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Dijon - 21)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -466,7 +466,7 @@
                     </div>
                     <div id="no31">
                         <h2>IUT de Villetaneuse</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Villetaneuse - 93)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -479,7 +479,7 @@
                     </div>
                     <div id="no32">
                         <h2>IUT de Montreuil</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Montreuil - 93)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -492,7 +492,7 @@
                     </div>
                     <div id="no33">
                         <h2>IUT de Marne la Vallée</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Champs-sur-Marne - 77)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -504,7 +504,7 @@
                     </div>
                     <div id="no34">
                         <h2>IUT de Paris Decartes</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Paris 16e Arrondissement - 75)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -518,7 +518,7 @@
                     </div>
                     <div id="no35">
                         <h2>IUT de Vezily</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Vezily-Villacoublay - 78)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -531,7 +531,7 @@
                     </div>
                     <div id="no36">
                         <h2>IUT d'Orsay</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Gif-sur-Yvette - 91)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -544,7 +544,7 @@
                     </div>
                     <div id="no37">
                         <h2>IUT de Sénart/Fontainebleau</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site Sénart (Lieusaint - 77)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -557,7 +557,7 @@
                     </div>
                     <div id="no38">
                         <h2>IUT d'Orleans</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Orléans - 45)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -571,7 +571,7 @@
                     </div>
                     <div id="no39">
                         <h2>IUT de Clermont-Ferrand</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Aubière - 63)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
@@ -592,7 +592,7 @@
                     </div>
                     <div id="no40">
                         <h2>IUT du Limousin</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site de Limoges (Limoges - 87)</p>
                             <ul>
                                 <li>Réalisation d'applications : conception, développement, validation</li>
@@ -601,7 +601,7 @@
                     </div>
                     <div id="no41">
                         <h2>IUT de Rodez</h2>
-                        <div id="grey_square">
+                        <div id="square">
                             <p>Site principal (Rodez - 12)</p>
                             <div id="desc">
                                 <p>Parcours : </p>
