--- a/public/page3_Temoignages.html
+++ b/public/page3_Temoignages.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BUT Informatique - Accueil</title>
+        <title>Témoignages</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -26,7 +26,7 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
-            <div id = "contenu_page" > 
+            <div id = "contenu_page" class="bordure"> 
                 <h1> Temoignages </h1> 
             
                 <p> Voici quelques témoignages d'étudiants de différents IUT. Les notes sont notés sur 5. </p>  
@@ -112,7 +112,7 @@
                         <label for = "IUT" > 
                             <p>Commune de votre IUT :</p> 
                         </label> 
-                        <input type = "text" id = "IUT" placeholder = "Martin" required > 
+                        <input type = "text" id = "IUT" placeholder = "Paris" required > 
 
                         <div id = "email" > 
 
