--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BUT Informatique - Accueil</title>
+        <title>Contact</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -27,7 +27,7 @@
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
 
-            <div id="contenu_page"> 
+            <div id="contenu_page" class="bordure"> 
             <h1> Contact </h1>
             <div id="formulaire">
                 <section id = "texte" >  
@@ -40,20 +40,28 @@
                     <form method = "post" action = "mailto:cocogesseentressangle@gmail.com"> 
 
                         <div id = "identite" > 
-                        <label for = "prenom" > Prénom : </label> 
+                        <label for = "prenom" > 
+                            <p>Prénom :</p> 
+                        </label> 
                         <input type = "text" id  = "prenom" placeholder = "Rose" required > 
 
-                        <label for = "nom" > Nom : </label> 
+                        <label for = "nom" > 
+                            <p>Nom :</p> 
+                        </label> 
                         <input type = "text" id = "nom" placeholder = "Martin" required > 
 
                         </div> 
 
                         <div id = "email" > 
 
-                        <label for = "e-mail" > E-mail : </label> 
+                        <label for = "e-mail" > 
+                            <p>E-mail :</p> 
+                        </label> 
                         <input type = "email" id = "e-mail" placeholder = "votreprenom.nom@domaine.fr" required > 
 
-                        <label for = "sujet" > Sujet :  </label> 
+                        <label for = "sujet" > 
+                            <p>Sujet :</p>  
+                        </label> 
                         
                         <select name="sujet" id="sujet" required>
                             <option value="" disabled selected hidden>Choisissez le sujet de votre message</option>
@@ -66,7 +74,9 @@
 
                         <div id = "message" > 
 
-                        <label for = "message" > Votre message : </label>
+                        <label for = "message" > 
+                            <p>Votre message :</p> 
+                        </label>
                         <textarea id = "message" name = "message" placeholder = "Message" required></textarea> 
                         </div> 
 
