--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -162,26 +162,27 @@
                 <div id = "tableau" > 
                     <div id = "premierecase" >  
                         <p> BUT </p> 
+
+                        <p> 3 ans </p> 
                     </div> 
 
                     <div id = "deuxiemecase" > 
                         <div id = "ingenieur" > 
                             <p> Diplôme d'ingénieur </p> 
-                        </div> 
 
-                        <div id = "licenseinformatique" > 
-                            <p> License informatique </p> 
-                        </div> 
-                    
-                        <div id = "licenseprofessionnelle" > 
-                            <p> License professionnelle </p> 
+                            <p> 2 ans </p> 
                         </div> 
 
                         <div id = "masterinformatique" > 
                             <p> Master informatique </p> 
+
+                            <p> 2 ans </p> 
                         </div>
                     </div>
-                </div>
+                </div> 
+
+                <p> ------1 an------- ------2 ans------ ------3 ans------ ------4 ans------ ------5 ans------ </p> 
+
             </div> 
 
             <!-------- Bas de page -------->
