--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -45,7 +45,10 @@
                     <div id="description">
                         <p class="nom">Corentin GESSE--ENTRESSANGLE</p>
                         <p class="fonction_actuelle">Etudiant en BUT Informatique à l'IUT Lyon 1 à Villeurbanne</p>
-                        <p>P</p>
+                        <p> Passionné par l'informatique dès mon plus jeune âge, je choisi en seconde l'enseignement d'exploration ICN (informatique et créations numériques). J'ai ensuite choisi la spécialité NSI et mathématiques en terminale pour être en accord avec mon projet professionnel. 
+                            Je me suis orienté cette année en BUT Informatique après avoir hésiter avec une license informatique et mathématiques et un bts SIO ou SN.   
+                            J'ai choisi cette formation pour ces matières générales, son accompagnement des étudiants et pour sa qualité d'être une formation professionnalisante.  
+                        </p>
                     </div>
                 </div>
 
