--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -83,6 +83,77 @@
                 <p> Le BUT Informatique est un diplôme reconnu par l’Etat. Il correspond à un BAC + 3. Il est de grade de licence. Le diplôme ce veut plus professionnalisant et plus tourné vers l’internationale. 
                 </p> 
 
+                <h2> Débouchés </h2> 
+
+                <p> 
+                Les débouchés sont très différents. Deux choix s'offrent aux étudiants à la fin des trois ans du BUT Informatique. Soit ils pursuivent leurs études 
+                soit ils vont directement sur le marché de l'emploi. 
+                </p> 
+            
+                <h3> Les poursuites d'études </h3> 
+
+                <p> 
+                    Voici un tableau récapitulatif des poursuites d'études après le BUT Informatique. 
+                </p> 
+
+                <div id = "tableau" > 
+                    <div id = "premierecase" >  
+                        <p> BUT </p> 
+
+                        <p> 3 ans </p> 
+                    </div> 
+
+                    <div id = "deuxiemecase" > 
+                        <div id = "ingenieur" > 
+                            <p> Diplôme d'ingénieur </p> 
+
+                            <p> 2 ans </p> 
+                        </div> 
+
+                        <div id = "masterinformatique" > 
+                            <p> Master informatique </p> 
+
+                            <p> 2 ans </p> 
+                        </div>
+                    </div> 
+
+                    <div id = "tableaufleche" > 
+                    <p> -------------------> </p> 
+
+                    <p> --------------------------------> </p> 
+
+                    <p> --------------------------------------------> </p> 
+
+                    <p> --------------------------------> </p> 
+
+                    <p> -------------------> </p> 
+                    </div> 
+                </div> 
+
+                <p> ------1 an------- ------2 ans------ ------3 ans------ ------4 ans------ ------5 ans------ </p> 
+
+                <h3> Quels métiers </h3> 
+
+                <p> 
+                    Voici une liste d'exemple de métiers pour lesquels vous pourraient travailler en faisant le BUT Informatique. 
+                </p> 
+
+                <ul>
+                    <li> Concepteur (applications mobiles, web, jeux vidéos etc.) ; </li> 
+                    <li> Développeur web (front-end/back-end) </li> 
+                    <li> Développeur d'applications mobiles </li> 
+                    <li> Techniciens en maintenance </li> 
+                    <li> Analyste programmeur ; </li> 
+                    <li> Administrateur des systèmes, des réseaux ou des bases de données </li> 
+                </ul> 
+
+                <h2> Prix de la formation </h2> 
+
+                <p> La formation a la chance d'être une formation contrôlée par l'Etat, donc les coûts de celle-ci restent relativement bas. 
+                    Le coût correspond donc aux droits universitaires : 170 euros + 92 euros de CVEC. 
+                    Cependant, la formation est entièrement gratuite pour les boursiers. 
+                </p> 
+
                 <h2> Comparatif avec les autres formations </h2> 
 
                 <p> Il existe différentes formations informatiques, voici un comparatif avec les autres formations </p> 
@@ -145,43 +216,6 @@
                     </tr>
 
                 </table> 
-
-                <h2> Débouchés </h2> 
-
-                <p> 
-                Les débouchés sont très différents. Deux choix s'offrent aux étudiants à la fin des trois ans du BUT Informatique. Soit ils pursuivent leurs études 
-                soit ils vont directement sur le marché de l'emploi. 
-                </p> 
-            
-                <h3> Les poursuites d'études </h3> 
-
-                <p> 
-                    Voici un tableau récapitulatif des poursuites d'études après le BUT Informatique. 
-                </p> 
-
-                <div id = "tableau" > 
-                    <div id = "premierecase" >  
-                        <p> BUT </p> 
-
-                        <p> 3 ans </p> 
-                    </div> 
-
-                    <div id = "deuxiemecase" > 
-                        <div id = "ingenieur" > 
-                            <p> Diplôme d'ingénieur </p> 
-
-                            <p> 2 ans </p> 
-                        </div> 
-
-                        <div id = "masterinformatique" > 
-                            <p> Master informatique </p> 
-
-                            <p> 2 ans </p> 
-                        </div>
-                    </div>
-                </div> 
-
-                <p> ------1 an------- ------2 ans------ ------3 ans------ ------4 ans------ ------5 ans------ </p> 
 
             </div> 
 
