--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -73,6 +73,72 @@
                 Pour valider un semestre il faut avoir une moyenne générale supérieur ou égale à 10/ 20 et avoir au moins 8 de moyenne à chaque matière. 
                 </p> 
 
+                <h3> Deroulé général de la formation </h3> 
+
+                <p> Les cours se déoulent en temps pleins dans la première année du BUT Informatique. Dès la deuxième année, les étudinats devront choisir leur parcours (liste disponible sur la page "liste des IUT"). Suivant leur parcours, ils pourront être amenés à travailler en alternance dès la deuxième année. 
+                    Ils devront suivre un stage au semestre 4 pour appréhender le monde du travail dans l'informatique. 
+                    Il devront dans tous les cas, être en alternance dans la troisième année du BUT Informatique. 
+                    Voici un tableau récapitulatif du déroulement général de la formation. 
+                </p> 
+
+                <div id = "tableau" > 
+                    <div id = "premierecase" >  
+                        <p> Cours en présentiels </p> 
+
+                        <p> 2 semestres </p> 
+                    </div> 
+
+                    <div id = "deuxiemecase" > 
+                        <div id = "deuxsemalternance" > 
+                            <p> Alternance </p> 
+
+                            <p> 2 semestres </p> 
+                        </div> 
+
+                        <div id = "deuxsempresentiels" > 
+                        <div id = "presentiels" >  
+                            <p> Cours en présentiels </p> 
+
+                            <p> 1 semestre </p> 
+                        </div>  
+
+                            <div id = "deuxsemstage" > 
+                                <p> Stage </p> 
+    
+                                <p> 1 semestre </p> 
+                            </div> 
+                        </div>
+                    </div> 
+
+                    <div id = "deuxiemecase" > 
+                        <div id = "alternance1" > 
+                            <p> Alternance </p> 
+
+                            <p> 2 semestres </p> 
+                        </div> 
+
+                        <div id = "alternance2" > 
+                            <p> Alternance </p> 
+
+                            <p> 2 semestres </p> 
+                        </div>
+                    </div> 
+
+                    <div id = "tableaufleche" > 
+                    <p> -------------------> </p> 
+
+                    <p> --------------------------------> </p> 
+
+                    <p> --------------------------------------------> </p> 
+
+                    <p> --------------------------------> </p> 
+
+                    <p> -------------------> </p> 
+                    </div> 
+                </div> 
+
+                <p> -----------1 sem----------- -----------2 sem----------- -----------3 sem----------- -----------4 sem----------- -----------5 sem---------- -----------6 sem----------- </p> 
+                
                 <h2> Les activités extra-scolaires </h2>  
 
                 <p> Les activités extra-scolaires sont parfois proposées par les I.U.T. par exemple le sport, la musique, le théâtre … Pour en savoir plus rendez-vous sur la page I.U.T. et allez sur le site de votre I.U.T. 
