--- a/public/page4_A_propos_de_nous.html
+++ b/public/page4_A_propos_de_nous.html
@@ -59,11 +59,10 @@
                     <div id="description">
                         <p class="nom">Nicolas DE SAINT JEAN</p>
                         <p class="fonction_actuelle">Etudiant en BUT Informatique à l'IUT Lyon 1 à Villeurbanne</p>
-                        <p>Je suis titulaire d'un baccalauréat technologie STI2D spécialté SIN (Système d'information et numérique) que j'ai réalisé au Lycée Réné Cassin à Tarare, 
-                           passionné par l'informatique et la culture scientifique depuis plusieurs années, je voulais m'orienter vers une formation où je pourrais apprendre pleinement 
-                           les différents domaines de l'informatique et aussi profiter de ma passion. Au début mon choix était surtout tourné vers un BTS SIO ou SN mais dès que je me suis renseigné sur 
-                           le BUT, j'ai remarqué que le contenu de la formation était beaucoup plus complet que celui du BTS. Donc après réflexion mon choix principal était l'IUT à Villeurbanne, j'ai 
-                           été admis et j'en suis t'es content aujourdhui.
+                        <p>Je suis titulaire d'un baccalauréat technologie STI2D spécialté SIN (Système d'information et numérique), passionné par l'informatique et la culture scientifique depuis plusieurs 
+                           années, je voulais m'orienter vers une formation où je pourrais apprendre pleinement les différents domaines de l'informatique et aussi profiter de ma passion. Au début mon choix 
+                           était surtout tourné vers un BTS SIO ou SN mais dès que je me suis renseigné sur le BUT, j'ai remarqué que le contenu de la formation était beaucoup plus complet que celui du BTS. 
+                           Donc après réflexion mon choix principal était l'IUT à Villeurbanne, j'ai été admis et j'en suis t'es content aujourdhui.
                         </p>
                     </div>
                 </div>
