--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -26,8 +26,57 @@
                 </nav>
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ---->
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+                <ul>
+                    <li><a href="#titre_1">Liste des IUT proposant la formation</a></li>
+                    <ul>
+                        <li><a href="#no1">IUT Lyon 1</a></li>
+                        <li><a href="#no2">IUT de Valence</a></li>
+                        <li><a href="#no3">IUT 2 de Grenoble</a></li>
+                        <li><a href="#no4">IUT d'Annecy</a></li>
+                        <li><a href="#no5">IUT de Nice</a></li>
+                        <li><a href="#no6">IUT Aix-Marseille</a></li>
+                        <li><a href="#no7">IUT de Montpellier</a></li>
+                        <li><a href="#no8">IUT de Toulouse</a></li>
+                        <li><a href="#no9">IUT de Blagnac</a></li>
+                        <li><a href="#no10">IUT de Bayonne</a></li>
+                        <li><a href="#no11">IUT de Bordeaux</a></li>
+                        <li><a href="#no12">IUT La Rochelle</a></li>
+                        <li><a href="#no13">IUT de Nantes</a></li>
+                        <li><a href="#no14">IUT de Vannes</a></li>
+                        <li><a href="#no15">IUT de Lannion</a></li>
+                        <li><a href="#no16">IUT de Laval</a></li>
+                        <li><a href="#no17">IUT Grand Ouest Normandie</a></li>
+                        <li><a href="#no18">IUT du Havre</a></li>
+                        <li><a href="#no19">IUT d'Amiens</a></li>
+                        <li><a href="#no20">IUT Littoral</a></li>
+                        <li><a href="#no21">IUT A de Lille</a></li>
+                        <li><a href="#no22">IUT de Lens</a></li>
+                        <li><a href="#no23">IUT de Valenciennes</a></li>
+                        <li><a href="#no24">IUT de Reims-Châlons-Charleville</a></li>
+                        <li><a href="#no25">IUT de Metz</a></li>
+                        <li><a href="#no26">IUT Nancy-Charlemagne</a></li>
+                        <li><a href="#no27">IUT d'Illkirch</a></li>
+                        <li><a href="#no28">IUT de Saint-Dié</a></li>
+                        <li><a href="#no29">IUT de Belfort-Monbéliard</a></li>
+                        <li><a href="#no30">IUT de Dijon</a></li>
+                        <li><a href="#no31">IUT de Villetaneuse</a></li>
+                        <li><a href="#no32">IUT de Montreuil</a></li>
+                        <li><a href="#no33">IUT de Marne la Vallée</a></li>
+                        <li><a href="#no34">IUT de Paris Decartes</a></li>
+                        <li><a href="#no35">IUT de Vezily</a></li>
+                        <li><a href="#no36">IUT d'Orsay</a></li>
+                        <li><a href="#no37">IUT de Sénart/Fontainebleau</a></li>
+                        <li><a href="#no38">IUT d'Orleans</a></li>
+                        <li><a href="#no39">IUT de Clermont-Ferrand</a></li>
+                        <li><a href="#no40">IUT du Limousin</a></li>
+                        <li><a href="#no41">IUT de Rodez</a></li>
+                    </ul>
+                </ul>
+            </div>
             <div id="contenu_page" class="bordure">
-                <h1>Liste des IUT proposant la formation</h1>
+                <h1 id="titre_1">Liste des IUT proposant la formation</h1>
                 <div id="liste_sites_iut">
                     <div id="no1">
                         <h2>IUT Lyon 1</h2>
@@ -259,7 +308,7 @@
                         </div>
                     </div>
                     <div id="no16">
-                        <h2>IUT Laval</h2>
+                        <h2>IUT de Laval</h2>
                         <div id="square">
                             <p>Site principal (Laval - 53)</p>
                             <div id="desc">
