--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -27,6 +27,10 @@
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
 
+            <div id="sommaire" class="bordure">
+                <h1>Sommaire</h1>
+            </div>
+
             <div id="contenu_page" class="bordure"> 
             
                 <h1> Qu'est ce que le BUT ? </h1> 
