--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -27,6 +27,12 @@
             </div>
             <!---- Contenu de la page (à changer en fonction de la page) ----> 
 
+            <div id = "page_professionnels" > 
+                <p> Vous êtes professionnels, professeurs, conseillés en orientation, une page vous est consacrée : </p> 
+
+                <button> <a href = "page7_page_professionnels.html" > Aller sur la page </a> > </button>
+            </div> 
+            
             <div id="sommaire" class="bordure">
                 <h1>Sommaire</h1>
             </div>
@@ -79,9 +85,9 @@
 
                 <h3> Deroulé général de la formation </h3> 
 
-                <p> Les cours se déoulent en temps pleins dans la première année du BUT Informatique. Dès la deuxième année, les étudinats devront choisir leur parcours (liste disponible sur la page "liste des IUT"). Suivant leur parcours, ils pourront être amenés à travailler en alternance dès la deuxième année. 
-                    Ils devront suivre un stage au semestre 4 pour appréhender le monde du travail dans l'informatique. 
-                    Il devront dans tous les cas, être en alternance dans la troisième année du BUT Informatique. 
+                <p> Les cours se déoulent en temps pleins dans la première année du BUT Informatique. Dès la deuxième année, les étudiants devront choisir leur parcours (liste disponible sur la page "liste des IUT"). Suivant leur parcours, ils pourront être amenés à travailler en alternance dès la deuxième année. 
+                    Dans le cas contraire ils suivrons un stage au semestre 4 pour appréhender le monde du travail dans l'informatique. 
+                    La troisième année du BUT Informatique devra être suivi obligatoirement en alternance.  
                     Voici un tableau récapitulatif du déroulement général de la formation. 
                 </p> 
 
@@ -153,10 +159,23 @@
                 <p> Le BUT Informatique est un diplôme reconnu par l’Etat. Il correspond à un BAC + 3. Il est de grade de licence. Le diplôme ce veut plus professionnalisant et plus tourné vers l’internationale. 
                 </p> 
 
+                <h2> Les parcours </h2> 
+
+                <p> 
+                    Les parcours sont différents selon chaque IUT. Vous pouvez trouvez ci-dessous la liste de tous les parcours proposés. 
+                </p> 
+
+                <ul> 
+                    <li> parcours réalisation d'applications : conception, développement, validation </li> 
+                    <li> parcours administration, gestion et exploitation des données </li> 
+                    <li> parcours déploiement, intégration d'applications et management du système d'information </li> 
+                    <li> parcours déploiement d'applications communicantes et sécurisées </li>
+                </ul>
+
                 <h2> Débouchés </h2> 
 
                 <p> 
-                Les débouchés sont très différents. Deux choix s'offrent aux étudiants à la fin des trois ans du BUT Informatique. Soit ils pursuivent leurs études 
+                Les débouchés sont très différents. Deux choix s'offrent aux étudiants à la fin des trois ans du BUT Informatique. Soit ils poursuivent leurs études,  
                 soit ils vont directement sur le marché de l'emploi. 
                 </p> 
             
